chore: Update .gitignore to include certificate and keystore files

--- a/instant-payment-service/.gitignore
+++ b/instant-payment-service/.gitignore
@@ -24,5 +24,13 @@ Thumbs.db
 # Environment
 .env
 
+# Certificates and Keystores
+*.p12
+*.jks
+*.crt
+*.pem
+*.key
+**/Certifications/
+
 # Others
 *.swp
