feat: Configure SSL settings for secure communication in payment service

--- a/instant-payment-service/instant-payment-service/src/main/resources/application.properties
+++ b/instant-payment-service/instant-payment-service/src/main/resources/application.properties
@@ -9,3 +9,15 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.data.mongodb.uri=mongodb://localhost:27017/instant_payment_db
 spring.data.mongodb.uuid-representation=standard
 
+
+
+# ==== Server HTTPS do PAYMENT-SERVICE ====
+server.ssl.key-store=classpath:Certifications/keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springboot
+
+# ==== TRUSTSTORE (para confiar no WALLET-SERVICE) ====
+server.ssl.trust-store=classpath:Certifications/truststore.jks
+server.ssl.trust-store-password=changeit
+server.ssl.trust-store-type=JKS
