feat: Configure SSL settings for secure communication in wallet service

--- a/wallet-service/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/wallet-service/src/main/resources/application.properties
@@ -14,4 +14,13 @@ spring.flyway.locations=classpath:db/migration
 server.port=8081
 
 
+# SSL/HTTPS Configuration
+server.ssl.enabled=true
+server.ssl.key-store=classpath:wallet-keystore.jks
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=wallet-cert
+server.ssl.key-password=123456
+
+
 
