--- a/instant-payment-service/instant-payment-service/pom.xml
+++ b/instant-payment-service/instant-payment-service/pom.xml
@@ -73,6 +73,19 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.matheus.shared</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
