--- a/instant-payment-service/instant-payment-service/pom.xml
+++ b/instant-payment-service/instant-payment-service/pom.xml
@@ -83,7 +83,12 @@
         <dependency>
             <groupId>com.matheus.shared</groupId>
             <artifactId>shared</artifactId>
-            <version>1.0.5</version>
+            <version>1.0.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
 	</dependencies>
