--- a/wallet-service/wallet-service/pom.xml
+++ b/wallet-service/wallet-service/pom.xml
@@ -86,9 +86,15 @@
         <dependency>
             <groupId>com.matheus.shared</groupId>
             <artifactId>shared</artifactId>
-            <version>1.0.5</version>
+            <version>1.1.3</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
