refactor: rename project root to MS-InstantPayment

--- a/MS-InstantPayment/MS-InstantPayment/src/main/resources/application.properties
+++ b/MS-InstantPayment/MS-InstantPayment/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Instant Payment Service
+spring.application.name=MS-InstantPayment
 
 #KAFKA CONFIGURATION
 spring.kafka.bootstrap-servers=localhost:9092
