--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=user-service
+spring.application.name=MS-User
 
 spring.datasource.url=jdbc:sqlserver://AVAPC-141153941\\SQLEXPRESS:1433;databaseName=MS-User;encrypt=true;trustServerCertificate=true
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
