--- a/MS-User/pom.xml
+++ b/MS-User/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.matheus.payments</groupId>
-	<artifactId>user-service</artifactId>
+	<artifactId>MS-User</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>user-service</name>
 	<description>User Service for Payment System</description>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.matheus.shared</groupId>
             <artifactId>shared</artifactId>
-            <version>1.1.4</version>
+            <version>1.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
