--- a/MS-User/pom.xml
+++ b/MS-User/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.matheus.shared</groupId>
             <artifactId>shared</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.7</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -93,6 +93,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>2.0.10</version>
         </dependency>
 	</dependencies>
 
